tests/integration/tests/macros/ui/http_error/fail/unknown_variant_option.stderr
error: unknown #[http_error(...)] variant option
 --> tests/macros/ui/http_error/fail/unknown_variant_option.rs:5:66
  |
5 |     #[http_error(status = BAD_REQUEST, message = "Invalid request", retryable)]
  |                                                                     ^^^^^^^^^
